[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/textures/player_icon.png" type="Texture" id=1]
[ext_resource path="res://resources/fonts/casino_gui_lower.tres" type="DynamicFont" id=2]
[ext_resource path="res://resources/fonts/casino_gui_higher.tres" type="DynamicFont" id=3]
[ext_resource path="res://gui/casino_gui.gd" type="Script" id=4]

[node name="CasinoGui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="total" type="Control" parent="."]
margin_left = -2.0
margin_top = 137.0
margin_right = 38.0
margin_bottom = 177.0

[node name="player_count" type="Control" parent="."]
margin_left = 8.0
margin_top = 147.0
margin_right = 48.0
margin_bottom = 187.0

[node name="1" type="Sprite" parent="player_count"]
position = Vector2( 33, 12 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
offset = Vector2( -8, 3 )

[node name="2" type="Sprite" parent="player_count"]
position = Vector2( 69, 12 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
offset = Vector2( -8, 3 )

[node name="3" type="Sprite" parent="player_count"]
position = Vector2( 105, 12 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
offset = Vector2( -8, 3 )

[node name="4" type="Sprite" parent="player_count"]
position = Vector2( 141, 12 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
offset = Vector2( -8, 3 )

[node name="5" type="Sprite" parent="player_count"]
position = Vector2( 177, 12 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
offset = Vector2( -8, 3 )

[node name="6" type="Sprite" parent="player_count"]
position = Vector2( 212.5, 12 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
offset = Vector2( -8, 3 )

[node name="Label_BAD" type="Label" parent="."]
margin_left = 2.0
margin_top = -27.0
margin_right = 216.0
margin_bottom = 136.0
custom_colors/font_color = Color( 0.890196, 0.552941, 0.815686, 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 2

[node name="Label_GOOD" type="Label" parent="."]
visible = false
margin_left = 2.0
margin_top = -27.0
margin_right = 216.0
margin_bottom = 136.0
custom_colors/font_color = Color( 0.890196, 0.552941, 0.815686, 1 )
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2
